applying react-scroll

--- a/client/src/components/home/Footer.css
+++ b/client/src/components/home/Footer.css
@@ -72,7 +72,7 @@
   cursor:pointer;
 }
 
-.footer .rights, a{
+.footer .rights{
   justify-content:center;
   color: lightgrey;
   font-family: Slabo;
