--- a/client/src/components/home/Footer.css
+++ b/client/src/components/home/Footer.css
@@ -2,13 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantata+One&family=Coustard&family=Prata&family=Slabo+13px&family=Suez+One&family=Vollkorn&family=Yeseva+One&display=swap');
 
 /*---------------- global css----------------*/
-.flex-row{
-  display:flex;
-  flex-direction:row;
-  flex-wrap:wrap;
-}
-
-
 :root{
   --text-grey: #364C62;
   --text-dark: black;
@@ -77,6 +70,7 @@
   color: lightgrey;
   font-family: Slabo;
 }
+
 .footer .rights a{
   color: #fdbd10;
   font-family: Slabo;
@@ -98,4 +92,23 @@
 .footer .movement span:hover{
   color: var(--dark-gunmetal);
   cursor: pointer;
+}
+
+
+/*-------------- media query 640----------*/
+/* setiap layar mengecil menjadi 640 px, */
+@media only screen and (max-width: 640px){
+
+.footer .container{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.footer .rights .text-grey{
+  font-size:0.8rem;
+  color: lightgrey;
+  font-family: Slabo;
+}
+
+
 }
