--- a/client/src/components/home/Footer.css
+++ b/client/src/components/home/Footer.css
@@ -37,7 +37,7 @@
 }
 
 .footer .container h2{
-  color: #fdbd10;
+  color: #fdb94e;
   font-family: Prata;
 }
 .footer .container p{
@@ -72,7 +72,7 @@
 }
 
 .footer .rights a{
-  color: #fdbd10;
+  color: #fdb94e;
   font-family: Slabo;
 }
 
