--- a/client/src/components/home/Main.css
+++ b/client/src/components/home/Main.css
@@ -30,6 +30,7 @@
   margin: 2rem;
   display:grid;
   grid-template-columns: 70% 30%;
+  font-family: Prata;
 }
 
 .site-content .post-content > .post-image, .post-title{
@@ -54,7 +55,7 @@
 
 .site-content .post-content > .post-image .book-description h2{
   font-size:2rem;
-  font-family: Suez One;
+  font-family: Prata;
   font-stretch: semi-expanded;
 }
 .site-content .post-content > .post-image .book-description p{
@@ -71,7 +72,7 @@
 
 .site-content .post-title h3{
   font-size:2rem;
-  font-family: Suez One;
+  font-family: Prata;
   font-stretch: semi-expanded;
 } 
 .site-content .post-title p{
@@ -89,6 +90,20 @@ button{
 }
 
 /*--------------side bar -------------------*/
+
+.site-content > .sidebar{ 
+  padding: .7rem;
+  background-color: #282828;
+  border-radius: .6rem;
+}
+
+ .projects{ 
+  padding: 1rem;
+  /* background-color: #c7c8ca; */
+  background-color: white;
+  border-radius: .5rem;
+  height: 95%;
+}
 
 .site-content > .sidebar .projects-list{
   font-family: Vollkorn;
