--- a/client/src/components/home/Main.css
+++ b/client/src/components/home/Main.css
@@ -11,6 +11,10 @@
   --text-grey: #364C62;
   --text-dark: black;
 
+  --yellowish: #fdb94e;
+  --light-dark: #525252;
+  --medium-Dark: #414141;
+  --dark: #313131;
   --baby-blue-eyes: #b0d7ff;
   --dark-gunmetal: #2d3142;
   --silver: #adacb5;
@@ -22,16 +26,15 @@
   margin-left: 1rem;
 }
 
-.container {
-  margin: 2rem;
-}
-
 .container .site-content{
-  margin: 2rem;
   display:grid;
   grid-template-columns: 70% 30%;
   font-family: Prata;
 }
+.container .site-content .content-site{
+  margin: 2rem;
+}
+
 
 .site-content .post-content > .post-image, .post-title{
   padding: 0 2rem 1rem 2rem;
@@ -93,24 +96,19 @@ button{
 
 .site-content > .sidebar{ 
   padding: .7rem;
-  background-color: #282828;
-  border-radius: .6rem;
+  background-color: var(--light-dark);
 }
 
  .projects{ 
   padding: 1rem;
-  /* background-color: #c7c8ca; */
-  background-color: white;
-  border-radius: .5rem;
-  height: 95%;
 }
 
-.site-content > .sidebar .projects-list{
+ .projects-list{
   font-family: Vollkorn;
   font-size:1.2rem;
 }
 
-.site-content > .sidebar .projects-list .list-item{
+ .projects-list .list-item{
   padding: 0.3rem 1rem;
 }
 
@@ -120,9 +118,12 @@ button{
 
 
 .container .site-content{
-  margin: 2rem;
   display:grid;
   grid-template-columns: 1fr;
+}
+
+.container .site-content .content-site{
+  margin: 2rem;
 }
 
 }
