--- a/client/src/components/resume/ResumeAboutMe.css
+++ b/client/src/components/resume/ResumeAboutMe.css
@@ -27,8 +27,6 @@
   font-weight: 700;
   text-transform: uppercase;
   border-bottom: 1px solid var(--yellowish);
-
-  /* position: relative; */
 }
 
 
@@ -47,9 +45,11 @@
 
 .aboutme .row .about-content .img{
   flex: 0 0 33.33%;
+  padding-top: 1.5vh;
 }
 
 .aboutme .row .about-content .img img{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   border: 4px solid var(--dark);
   width: 20vw;
   height: auto;
@@ -152,4 +152,173 @@
  .aboutme .row .about-content .text .social-media a:hover::before{
   width: 85%;
   left: 0;
+}
+
+.aboutme .container .row .education {
+  margin-top: 8vh;
+}
+
+.aboutme .container .row .education h2, h4, p {
+  margin: 0;
+}
+.aboutme .container .row .education h2 {
+  font-size: 1.7rem;
+  font-weight:600;
+  letter-spacing: 1px;
+  width: 15.9vw;
+  margin: 0;
+  border-bottom: 2px solid var(--yellowish);
+}
+
+.box-shadow{
+box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.box-shadow:hover{
+ box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.aboutme .container .row .education .timeline {
+  margin-top: 5vh;
+  background-color: var(--light-grey);
+  border: 2px solid #d4d4e3;
+  border-radius: .3rem;
+  padding: 2rem;
+  font-size: 1.2rem;
+  font-weight:400;
+  letter-spacing: 1px;
+  color: var(--dark);
+}
+.timeline .timeline-item {
+  padding: 2vw;
+  border-left: 2px solid var(--dark);
+}
+
+.timeline-item .dot {
+  margin-top: 5vh;
+  position: absolute;
+  background-color: var(--yellowish);
+  border: 1px solid var(--dark);
+  width: .5rem;
+  height: .5rem;
+  border-radius: .2rem;
+  left: 12.36%;
+}
+
+.timeline-item  .timeline-date{
+  font-size: .9rem;
+  font-weight: 400;
+}
+.timeline-item  .timeline-title{
+  font-size: 1.3rem;
+}
+
+
+/* media screen to handle responsive into mobile screen */
+
+@media only screen and (max-width: 640px){
+
+.aboutme .section-title{
+  margin-bottom: 4vh;
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+.aboutme .about-content .row{
+  display: grid;
+  grid-template-columns: 1fr;
+  flex-wrap: wrap;
+}
+
+.aboutme .row .about-content .img img{
+  border: 4px solid var(--dark);
+  width: 80vw;
+  height: auto;
+  display: block;
+}
+.aboutme .row .about-content .text .detail-content{
+  margin: 4vh 0;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.aboutme .row .about-content .text p{
+  color: var(--light-grey);
+  font-size: 1rem;
+  margin: 0;
+}
+
+.aboutme .row .about-content .text .detail-content p{
+  color: var(--light-grey);
+  max-width: 90%;
+  font-size: 1rem;
+  margin : 1vh 0;
+  padding: 1vh 0;
+  border-bottom: 1px solid var(--dark);
+}
+.aboutme .row .about-content .text .social-media a{
+  margin-top: 3vh;
+  margin-right: 2vw;
+  padding: .7rem .9rem;
+  background-color: black;
+  border-radius: 50%;
+  color: var(--yellowish);
+  font-size: .9rem;
+}
+
+.aboutme .row .about-content .text{
+  padding: 5vh 0 0 3vw;
+}
+.aboutme .row .about-content .text h4{
+  font-size: 1.5rem;
+  font-weight:600;
+  letter-spacing: 1px;
+  margin: 0;
+
+  position: relative;
+}
+
+.aboutme .row .about-content .text h4::before{
+  content: " ";
+  background-color: var(--yellowish);
+  position: absolute;
+  height: .4vh;
+  width: 0%;
+  right: 0;
+  bottom: 0;
+  transition: all 1s ease;
+}
+
+.aboutme .row .about-content .text h4:hover::before{
+  width: 88%;
+  left: 0;
+}
+.aboutme .row .about-content .text h5{
+  font-size: 1.1rem;
+  font-weight:400;
+  margin: 0 0 2vh 0;
+}
+
+.aboutme .container .row .education h2 {
+  font-size: 1.6rem;
+  font-weight:600;
+  letter-spacing: 1px;
+  width: 45vw;
+  margin: 0;
+  border-bottom: 2px solid var(--yellowish);
+}
+.timeline .timeline-item {
+  padding: 5vw;
+  border-left: 2px solid var(--dark);
+}
+.timeline-item .dot {
+  margin-top: 4.8vh;
+  position: absolute;
+  background-color: var(--yellowish);
+  border: 1px solid var(--dark);
+  width: .5rem;
+  height: .5rem;
+  border-radius: .2rem;
+  left: 17vw;
+}
 }
