--- a/client/src/components/home/Header.css
+++ b/client/src/components/home/Header.css
@@ -29,6 +29,7 @@ main .site-title{
 }
 
 main .site-title .avatar{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   margin-top:10rem;
   background:transparent;
   width:21rem;
@@ -75,7 +76,7 @@ main .site-title .typed{
     padding:1.8rem;
     text-align:center;
     color: var(--text-light);
-    border-radius:5%;
+    border-radius:2%;
     cursor: pointer;
   }
   main .site-title h1, h3{
