--- a/client/src/components/home/Main.css
+++ b/client/src/components/home/Main.css
@@ -35,43 +35,47 @@
   margin: 2rem;
 }
 
-
-.site-content .post-content > .post-image, .post-title{
-  padding: 0 2rem 1rem 2rem;
-  position: relative;
-}
-
-
-.site-content .post-content > .post-image > div{
+.site-content .post-content > .post-image .image-frame{
+  width: 255px;
+  height: 380px;
   overflow: hidden;
 }
 
+.site-content .post-content > .post-image, .post-title{
+  padding: 0 2rem 1rem 2rem;
+}
+
 .site-content .post-content > .post-image .image{
-  width: 80%;
+  width: 100%;
+  height: 100%;
+  transition: 1s ease;
+}
+
+.site-content .post-content > .post-image .image:hover{
+  width: 105%;
+  height: 105%;
   height:auto;
 }
 
 .site-content .post-content > .post-image .book-description{
+  margin-left: 1rem;
   width: 50%;
   height:auto;
 }
 
 .site-content .post-content > .post-image .book-description h2{
+  margin : 0;
   font-size:2rem;
   font-family: Prata;
   font-stretch: semi-expanded;
 }
 .site-content .post-content > .post-image .book-description p{
+  padding: .5rem 0;
   font-size:1.2rem;
   font-family: Slabo;
   color: var(--text-grey);
 }
 
-.site-content .post-content > .post-image .image:hover{
-  width: 90%;
-  height:auto;
-  transition: 1s ease;
-}
 
 .site-content .post-title h3{
   font-size:2rem;
@@ -104,6 +108,7 @@ button{
 }
 
  .projects-list{
+  padding-left: 0rem;
   font-family: Vollkorn;
   font-size:1.2rem;
 }
@@ -123,7 +128,57 @@ button{
 }
 
 .container .site-content .content-site{
-  margin: 2rem;
+  margin: 1rem;
+}
+.site-content .post-content > .post-image, .post-title{
+  padding: 0 .5rem 1rem .5rem;
+  position: relative;
 }
 
+.site-content .post-content > .post-image .image-frame{
+  /* width: 255px; */
+  /* height: 380px; */
+  width: 90%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.site-content .post-content > .post-image .image{
+  width: 100%;
+  height: 100%;
+}
+
+.site-content .post-content > .post-image .book-description{
+  margin: 1rem 0 0 0;
+  width: 100%;
+  height:auto;
+}
+
+.site-content .post-content > .post-image .book-description h2{
+  font-size: 1.6rem;
+  font-family: Prata;
+  font-stretch: semi-expanded;
+}
+.site-content .post-content > .post-image .book-description p{
+  padding: .3rem 0;
+  font-size: 1rem;
+  font-family: Slabo;
+  color: var(--text-grey);
+}
+.site-content .post-title h3{
+  font-size: 1.7rem;
+  font-family: Prata;
+  font-stretch: semi-expanded;
+} 
+.site-content .post-title p{
+  font-size: 1rem;
+  font-family: Slabo;
+  color: var(--text-grey);
+} 
+ .projects-list {
+  padding: 0.3rem .5rem;
+}
+ .projects-list .list-item{
+  padding: 0.3rem .5rem;
+}
 }
