--- a/client/src/components/resume/ResumeHeader.css
+++ b/client/src/components/resume/ResumeHeader.css
@@ -53,6 +53,7 @@
   transition: ease 0.3s;
   right: 0;
 }
+
 .home .navigation .btn-sign:hover{
   transform: translateX(-2vw);
 }
@@ -87,7 +88,7 @@
 
 .home .home-content .block h6{
   color: #fff;
-  font-size:21px;
+  font-size: 1.2rem;
   font-weight: 500;
   margin:0;
   padding:0;
@@ -97,7 +98,7 @@
 
 .home .home-content .block h1{
   color: #fff;
-  font-size:60px;
+  font-size: 4rem;
   font-weight: 700;
   margin:0;
   padding:0;
@@ -105,7 +106,7 @@
 }
 .home .home-content .block h3{
   color: #fff;
-  font-size:40px;
+  font-size: 2.8rem;
   font-weight: 300;
   margin:0;
   padding:0;
@@ -120,7 +121,7 @@
 .home .home-content .block .webpage a{
   padding: 1rem;
   color: #fff;
-  font-size:16px;
+  font-size: .9rem;
   font-weight: 300;
   position: relative;
 }
@@ -143,4 +144,68 @@
 
 .home .home-content .block .webpage a:hover{
   color: var(--yellowish);
+}
+
+@media only screen and (max-width: 640px) {
+
+.home{
+  min-height:100vh;
+  background-image: url('../../assets/OCT_5183-02.jpeg');
+  background-size: cover;
+  background-position: right;
+  background-attachment: fixed;
+  padding: 3vh;
+  animation: home 2s 1;
+}
+
+.home .navigation .btn-sign{
+  color: white;
+  padding-left: 1rem;
+  width: 2rem;
+  height: 2rem;
+  transition: ease 0.3s;
+  right: 0;
+}
+.home .home-content .block{
+  max-width: 75%;
+  margin-top: 5vh;
+  padding-left: 3vw;
+  border-left: 4px solid #fff;
+  position: relative;
+}
+
+.home .home-content .block h6{
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin:0;
+  padding:0;
+  line-height: 1;
+  opacity: 1;
+}
+
+.home .home-content .block h1{
+  color: #fff;
+  font-size: 3.2rem;
+  font-weight: 700;
+  margin:0;
+  padding:0;
+  line-height: 1;
+}
+.home .home-content .block h3{
+  color: #fff;
+  font-size: 2.3rem;
+  font-weight: 300;
+  margin:0;
+  padding:0;
+  line-height: 1;
+}
+
+.home .home-content .block .webpage a{
+  padding: .5rem;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: 300;
+  position: relative;
+}
 }
