--- a/client/src/components/home/Navbar.css
+++ b/client/src/components/home/Navbar.css
@@ -18,6 +18,7 @@
 }
 p, a{
   text-decoration:none;
+  /* color: var(--light-grey); */
   color: var(--text-dark);
 }
 
@@ -32,7 +33,8 @@ ul{
 
 /* -----x-------- Global Classes ---------x-------*/
 .nav{
-  background : #F5F5F5;
+  background : #f5f5f5;
+  /* background : var(--dark); */
   color: var(--text-dark);
   padding: 0 2.3rem 0 2rem;
   height: 22vh;
@@ -40,6 +42,7 @@ ul{
   position: relative;
   overflow: hidden;
   transition:height 1s ease-in-out;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .nav .nav-menu{
@@ -47,7 +50,10 @@ ul{
 }
 
 .nav .nav-menu .nav-brand{
-  margin-top: 0.7rem;
+  margin-top: 1.5rem;
+}
+.nav .nav-menu .nav-brand .brand{
+  /* filter: invert(100%); */
 }
 
 .nav .toggle-collapse{
@@ -64,7 +70,7 @@ ul{
   justify-content:flex-end;
   padding: 3.5rem 1rem;
   font-size:1.5rem;
-  color: var(--text-dark);
+  color: var(--light-grey);
 }
 
 .nav .nav-items{
@@ -77,6 +83,7 @@ ul{
 }
 
 .nav .nav-items .nav-link{
+  margin-top: 3.5vh;
   font-family: Bitter;
   padding: 2.6rem 1rem;
   font-size:1.3rem;
@@ -109,14 +116,15 @@ ul{
   height: 1.8rem;
 }
 .nav .social{
-  padding: 3.5rem 0;
+  padding: 3.9rem 0;
 }
 
 /* ------------- manipulated nav ---------------*/
 
 
 .nav1{
-  background : #F5F5F5;
+  background : var(--dark);
+  /* background : #F5F5F5; */
   color: var(--text-grey);
   padding: 0 2.3rem 0 2rem;
   height: 29rem;
@@ -124,6 +132,7 @@ ul{
   position: relative;
   overflow: hidden;
   transition:height 1s ease-in-out;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .nav1 .nav-menu{
@@ -131,7 +140,11 @@ ul{
 }
 
 .nav1 .nav-menu .nav-brand{
-  margin-top: 0.7rem;
+  margin-top: 1.5rem;
+}
+
+.nav1 .nav-menu .nav-brand .brand{
+  filter: invert(100%);
 }
 
 .nav1 .toggle-collapse{
@@ -146,7 +159,7 @@ ul{
   justify-content:flex-end;
   padding: 3.5rem 1rem;
   font-size:1.5rem;
-  color: var(--text-grey);
+  color: var(--light-grey);
 }
 
 .nav1 .nav-items{
@@ -163,11 +176,11 @@ ul{
 }
 
 .nav1 .nav-items .nav-link:hover{
-  background-color: var(--dark-gunmetal);
+  background-color: var(--medium-Dark);
 }
 
 .nav1 .nav-items .nav-link:hover p{
-  color: var(--light-grey);
+  color: var(--yellowish);
 }
 
 .nav1 .social .icon{
