report for today: 1. Resume education have done. 2. Resume project have done. 3. project has been fixed. 4. fixing lil' bug. 5. Resume is ready to be deployed.

--- a/client/src/components/home/Header.css
+++ b/client/src/components/home/Header.css
@@ -53,7 +53,7 @@ main .site-title h1, h3{
 }
 main .site-title .typed{
   background-color: var(--dark);
-  border-radius: 10%;
+  border-radius: 8px;
   padding: 1rem;
   color: #fdb94e;
 }
