--- a/client/src/components/home/Footer.css
+++ b/client/src/components/home/Footer.css
@@ -70,6 +70,7 @@
 }
 
 .footer .rights{
+  padding-bottom: 2rem;
   justify-content:center;
   color: lightgrey;
   font-family: Slabo;
@@ -109,6 +110,7 @@
   }
 
   .footer .rights .text-grey{
+    padding-bottom: 1rem;
     font-size:0.8rem;
     color: lightgrey;
     font-family: Slabo;
