--- a/client/src/components/home/Navbar.css
+++ b/client/src/components/home/Navbar.css
@@ -18,8 +18,8 @@
 }
 p, a{
   text-decoration:none;
-  /* color: var(--light-grey); */
-  color: var(--text-dark);
+  color: var(--light-grey);
+  /* color: var(--text-dark); */
 }
 
 .flex-row{
@@ -33,8 +33,8 @@ ul{
 
 /* -----x-------- Global Classes ---------x-------*/
 .nav{
-  background : #f5f5f5;
-  /* background : var(--dark); */
+  /* background : #f5f5f5; */
+  background : var(--dark);
   color: var(--text-dark);
   padding: 0 2.3rem 0 2rem;
   height: 22vh;
@@ -53,7 +53,7 @@ ul{
   margin-top: 1.5rem;
 }
 .nav .nav-menu .nav-brand .brand{
-  /* filter: invert(100%); */
+  filter: invert(100%);
 }
 
 .nav .toggle-collapse{
@@ -70,8 +70,13 @@ ul{
   justify-content:flex-end;
   padding: 3.5rem 1rem;
   font-size:1.5rem;
-  /* color: var(--light-grey); */
-  color: var(--text-dark);
+  color: var(--light-grey);
+  /* color: var(--text-dark); */
+}
+
+.nav .toggle-collapse .toggle-icons:hover{
+
+  color: var(--yellowish);
 }
 
 .nav .nav-items{
@@ -160,8 +165,12 @@ ul{
   justify-content:flex-end;
   padding: 3.5rem 1rem;
   font-size:1.5rem;
-  /* color: var(--light-grey); */
-  color: var(--text-dark);
+  color: var(--light-grey);
+  /* color: var(--text-dark); */
+}
+.nav1 .toggle-collapse .toggle-icons:hover{
+
+  color: var(--yellowish);
 }
 
 .nav1 .nav-items{
