--- a/client/src/components/resume/ResumeExpertise.css
+++ b/client/src/components/resume/ResumeExpertise.css
@@ -4,6 +4,100 @@
   --light-dark: #525252;
   --medium-Dark: #414141;
   --dark: #313131;
+  --very-dark: #232323;
   --yellowish: #fdbd10;
   --white: #fff;
+}
+
+.expertise{
+  margin : 0;
+  background-color: var(--very-dark);
+  padding: 0 10vw 10vh 10vw ;
+  color: var(--light-grey);
+}
+
+.expertise .container .expertise-title{
+  border-bottom: 2px solid var(--yellowish);
+  width: 32.33%;
+}
+.expertise .container .expertise-title h2{
+  color: var(--white);
+  margin : 0 0 .2rem 0;
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+.expertise .container .expertise-content{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  background-color: black;
+  border-radius: 10px;
+  margin-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+.expertise .container .expertise-content .content-list{
+  margin : .9rem 0 .3rem .2rem;
+  padding: 0 .3rem;
+  flex: 0 0 calc(50% - 15px);
+  max-width: calc(50% - 15px);
+}
+
+.expertise .container .expertise-content .content-list h5{
+  color: var(--light-grey);
+  margin: .5rem 0;
+  font-size: 1rem;
+}
+
+.expertise .container .expertise-content .content-list .bar{
+  height: .3rem;
+  background-color: var(--light-dark);
+  position: relative;
+}
+.expertise .container .expertise-content .content-list .bar .bar-in{
+  background-color: var(--yellowish);
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  animation: bar .8s ease;
+}
+
+@keyframes bar {
+  0%{
+    width: 0;
+  }
+}
+
+.expertise .container .expertise-content .content-list .bar .bar-in p{
+  position: absolute;
+  right: 0;
+  top: -2rem;
+}
+
+
+@media only screen and (max-width: 640px){
+  .expertise .container .expertise-title{
+    border-bottom: 2px solid var(--yellowish);
+    width: 65%;
+    margin-bottom : 1.5rem;
+  }
+  .expertise .container .expertise-title h2{
+    color: var(--white);
+    margin : 0 0 .2rem 0;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+  .expertise .container .expertise-content{
+    margin-top: .7rem;
+  }
+  .expertise .container .expertise-content .content-list h5{
+    color: var(--light-grey);
+    margin: .5rem 0;
+    font-size: .8rem;
+  }
+  .expertise .container .expertise-content .content-list .bar .bar-in p{
+    font-size: .8rem;
+    position: absolute;
+    right: 0;
+    top: -1.6rem;
+  }
 }
