tidy up layout in main content

--- a/client/src/components/home/Footer.css
+++ b/client/src/components/home/Footer.css
@@ -47,6 +47,8 @@
 .footer .container p{
   color: lightgrey;
   font-family: Slabo;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .footer .newsLetter .form-element{
