--- a/client/src/components/home/Main.css
+++ b/client/src/components/home/Main.css
@@ -86,6 +86,8 @@
   font-size:1.2rem;
   font-family: Slabo;
   color: var(--light-grey);
+  text-align: justify;
+  text-justify: inter-word;
 } 
 
 /* button{ */
@@ -110,6 +112,8 @@
 
  .projects .projects-thoughts p{ 
    color: var(--light-grey);
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .projects-list{
@@ -168,7 +172,7 @@
 }
 .site-content .post-content > .post-image .book-description p{
   padding: .3rem 0;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: Slabo;
   color: var(--light-grey);
 }
@@ -178,7 +182,7 @@
   font-stretch: semi-expanded;
 } 
 .site-content .post-title p{
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: Slabo;
   color: var(--light-grey);
 } 
