--- a/client/src/components/resume/ResumeHeader.css
+++ b/client/src/components/resume/ResumeHeader.css
@@ -104,6 +104,7 @@
   padding:0;
   line-height: 1.2;
 }
+
 .home .home-content .block h3{
   color: #fff;
   font-size: 2.8rem;
@@ -176,7 +177,7 @@
 
   .home .home-content .block h6{
     color: #fff;
-    font-size: 1.2rem;
+    font-size: 4vw;
     font-weight: 500;
     margin:0;
     padding:0;
@@ -186,7 +187,7 @@
 
   .home .home-content .block h1{
     color: #fff;
-    font-size: 3.2rem;
+    font-size: 12vw;
     font-weight: 700;
     margin:0;
     padding:0;
@@ -194,7 +195,7 @@
   }
   .home .home-content .block h3{
     color: #fff;
-    font-size: 2.3rem;
+    font-size: 8vw;
     font-weight: 300;
     margin:0;
     padding:0;
@@ -204,7 +205,7 @@
   .home .home-content .block .webpage a{
     padding: .5rem;
     color: #fff;
-    font-size: .8rem;
+    font-size: 3vw;
     font-weight: 300;
     position: relative;
   }
