--- a/client/src/components/home/Footer.css
+++ b/client/src/components/home/Footer.css
@@ -1,9 +1,8 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Cantata+One&family=Coustard&family=Prata&family=Slabo+13px&family=Suez+One&family=Vollkorn&family=Yeseva+One&display=swap');
 
 /*---------------- global css----------------*/
-:root{
-  --text-grey: #364C62;
+:root {
+  --text-grey: #364c62;
   --text-dark: black;
 
   --light-dark: #525252;
@@ -17,122 +16,139 @@
   --yellowish: #fdb94e;
 }
 
-.flex-row{
-  display:flex;
-  flex-direction:row;
-  flex-wrap:wrap;
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 /*-------------------global css ---------------*/
-.footer{
+.footer {
   position: relative;
   margin-top: auto;
   height: 60%;
   background-color: black;
 }
-.footer .container{
+.footer .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 
-.footer .container > div{
+.footer .container > div {
   flex-basis: 0;
   padding: 3rem 2rem;
 }
 
-.footer .container h2{
+.footer .container h2 {
   color: var(--yellowish);
   font-family: Prata;
 }
-.footer .container p{
+.footer .container p {
   color: lightgrey;
   font-family: Slabo;
   text-align: justify;
   text-justify: inter-word;
 }
 
-.footer .newsLetter .form-element{
+.footer .newsLetter .form-element {
   position: relative;
   z-index: 2;
-  background:black;
+  background: transparent;
   display: inline-block;
+  width: 33vw;
 }
-.footer .newsLetter .form-element input{
-  padding:.5rem .7rem;
-  border:none;
-  background:transparent;
+.footer .newsLetter .form-element input {
+  padding: 0.5rem 0.7rem;
+  border: none;
+  background: transparent;
   color: lightgrey;
-  font-size:1rem;
-  width: 75%;
+  font-size: 1rem;
+  width: 25vw;
 }
-.footer .newsLetter .form-element span{
-  padding:.5rem .7rem;
+.footer .newsLetter .form-element span {
+  padding: 0.5rem 0.7rem;
   background: var(--yellowish);
-  cursor:pointer;
+  cursor: pointer;
 }
 
-.footer .rights{
+.footer .rights {
   padding-bottom: 2rem;
-  justify-content:center;
+  justify-content: center;
   color: lightgrey;
   font-family: Slabo;
 }
 
-.footer .rights a{
+.footer .rights a {
   color: var(--yellowish);
   font-family: Slabo;
 }
 
-.footer .movement{
+.footer .movement {
   background-color: var(--yellowish);
-  padding:.5rem;
-  width:1rem;
-  height:1.2rem;
+  padding: 0.5rem;
+  width: 1rem;
+  height: 1.2rem;
   position: absolute;
   right: 6%;
   top: 50%;
 }
 
-.footer .movement span{
+.footer .movement span {
   color: var(--dark-gunmetal);
 }
-.footer .movement span:hover{
+.footer .movement span:hover {
   color: var(--dark-gunmetal);
   cursor: pointer;
 }
 
-
 /*-------------- media query 640----------*/
 /* setiap layar mengecil menjadi 640 px, */
-@media only screen and (max-width: 640px){
-
-  .footer .container{
+@media only screen and (max-width: 640px) {
+  .footer .container {
     display: grid;
     grid-template-columns: 1fr;
   }
 
-.footer .newsLetter .form-element input{
-  padding:.5rem .7rem;
-  border:none;
-  background:transparent;
-  color: lightgrey;
-  font-size:1rem;
-  width: 50vw;
-}
-.footer .movement{
-  background-color: var(--yellowish);
-  padding:.5rem;
-  width: 5vw;
-  height: 6vw;
-  position: absolute;
-  right: 6%;
-  top: 50%;
-}
+  .footer .newsLetter .form-element {
+    position: relative;
+    z-index: 2;
+    background: transparent;
+    display: inline-block;
+    width: 65vw;
+  }
 
-  .footer .rights .text-grey{
+  .footer .newsLetter .form-element input {
+    padding: 0.5rem 0.7rem;
+    border: none;
+    background: transparent;
+    color: lightgrey;
+    font-size: 1rem;
+    width: 50vw;
+  }
+  .footer .movement {
+    background-color: var(--yellowish);
+    padding: 0.5rem;
+    width: 5vw;
+    height: 6vw;
+    position: absolute;
+    right: 6%;
+    top: 55%;
+  }
+
+  .footer .rights .text-grey {
     padding-bottom: 1rem;
     font-size: 3vw;
     color: lightgrey;
     font-family: Slabo;
+  }
+}
+
+@media only screen and (max-width: 380px) {
+  .footer .newsLetter .form-element {
+    position: relative;
+    z-index: 2;
+    background: transparent;
+    display: inline-block;
+    width: 85vw;
   }
 }
